test/src/e2e_vm_tests/test_programs/should_fail/attributes_fuzz_invalid_multiplicity/src/main.sw
library;

#[fuzz]
#[fuzz]
fn multiple_fuzz_attributes() {
}

#[test]
#[fuzz]
fn both_test_and_fuzz_attributes() {
}